--- a/day03/package.json
+++ b/day03/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.0"
+    "express-handlebars": "^5.2.0",
+    "node-fetch": "^2.6.1",
+    "with-query": "^1.3.0"
   }
 }
