--- a/day03_giphy/package.json
+++ b/day03_giphy/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "day02_dice",
+  "name": "day03_giphy",
   "version": "1.0.0",
+  "description": "",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
