--- a/day27/package.json
+++ b/day27/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-s3": "^2.0.5",
+    "aws-sdk": "^2.810.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "mongodb": "^3.6.3",
